--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <header>
         <div class="container-header">
-            <img class="logo" src="img/Netflix_2015_logo.svg" height="40" alt="logo da Netflix">
+            <img class="logo" src="img/Netflix-logo.svg" height="40" alt="logo da Netflix">
             <nav>
-                <a href="#">Inicio</a>
-                <a href="#">Séries</a>
+                <a href="index.html">Inicio</a>
+                <a href="series.html">Séries</a>
                 <a href="#">Filmes</a>
                 <a href="#">Documentários</a>
             </nav>
@@ -40,35 +40,99 @@
 
     <div class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
+
                 <div class="item">
-                <img class="box-filme" src="img/mini1.jpg" alt="">
+                <img class="box-fs" src="img/minif1.jpg" alt="Vikings">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini2.jpg" alt="">
+                    <img class="box-fs" src="img/minis2.jpg" alt="Peaky Blinders">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini3.jpg" alt="">
+                    <img class="box-fs" src="img/minif3.jpg" alt="Redenção">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini4.jpg" alt="">
+                    <img class="box-fs" src="img/minif4.jpg" alt="O Projeto Adam">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini5.jpg" alt="">
+                    <img class="box-fs" src="img/minis5.jpg" alt="Lucifer">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini6.jpg" alt="">
+                    <img class="box-fs" src="img/minif6.jpg" alt="Ameaça Lunas">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini7.jpg" alt="">
+                    <img class="box-fs" src="img/minif7.jpg" alt="Eternos">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini8.jpg" alt="">
+                    <img class="box-fs" src="img/minif8.jpg" alt="Hacker">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini9.jpg" alt="">
+                    <img class="box-fs" src="img/minif9.jpg" alt="Expresso do amanhã">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini10.jpg" alt="">
+                    <img class="box-fs" src="img/minis10.jpg" alt="A anatomia de grey">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif11.jpg" alt="A era do gelo">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif12.jpg" alt="Era uma vez em Hollywood">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif13.jpg" alt="Dune">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minis14.jpg" alt="25 e 21">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif15.jpg" alt="Justiceiro">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minis16.jpg" alt="CSI Vegas">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif17.jpg" alt="Shang-chi A lenda dos dez aneis">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif18.jpg" alt="Assumindo o controle">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif19.jpg" alt="Jumanji">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif20.jpg" alt="Morbius">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif21.jpg" alt="De volta ao espaço">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minis22.jpg" alt="Roda do tempo">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif23.jpg" alt="Falçao eo soldado infernal">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minis24.jpg" alt="Dead in the Water">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif25.jpg" alt="Cavaleiro da lua">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif26.jpg" alt="Harry Potter">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif27.jpg" alt="Gavião arqueiro">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif29.jpg" alt="Jolt">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minis30.jpg" alt="Inventando Anna">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minis32.jpg" alt="Big Sky">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minif33.jpg" alt="Através da minha janela">
                 </div>
         </div>
     </div>
