--- a/documentarios.html
+++ b/documentarios.html
@@ -8,7 +8,7 @@
 <!--owl css-->
 <link rel="stylesheet" href="css/owl.carousel.min.css">
 <link rel="stylesheet" href="css/owl.theme.default.min.css">
-<title>Netflix Séries</title>
+<title>Netflix Documentários</title>
 </head>
 <body>
 
@@ -81,7 +81,7 @@ header nav a:hover {
 /*Filme principal*/
 .filme-principal {
     font-size: 1em;
-    background-image:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url(img/peaky.jpg);
+    background-image:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url(img/Imperio\ Romano.jpg);
     height: 500px;
     background-size: cover;
     background-position: center center;
@@ -153,8 +153,8 @@ header nav a:hover {
 <main>
     <div class="filme-principal">
         <div class="container">
-            <h2 class="titulo">PEAKY BLINDERS</h2>
-            <p class="descricao">Situada nas violentas ruas de Birmingham nos anos 1920, Peaky Blinders retrata a evolução brutal da família criminosa Shelby e de seu líder, Tommy Shelby (Cillian Murphy), de gângster a legítimo homem de negócios e membro do parlamento, sempre ao lado do irmão Arthur (Paul Anderson).</p>
+            <h2 class="titulo">IMPÉRIO ROMANO</h2>
+            <p class="descricao">Esta mistura de documentário e épico histórico narra o período de turbulência e violência em Roma durante os impérios de Cômodo, Júlio César e Calígula.</p>
             <div class="botoes">
                 <button role="button" class="botao"> <i class="fa-solid fa-play"></i> ASSISTIR AGORA</button>
                 <button role="button" class="botao"> <i class="fa-solid fa-circle-info"></i> MAIS INFORMAÇÕES</button>
@@ -166,31 +166,31 @@ header nav a:hover {
 <div class="carrosel-filmes">
     <div class="owl-carousel owl-theme">
                 <div class="item">
-                    <img class="box-fs" src="img/minis1.jpg" alt="Vikings">
+                    <img class="box-fs" src="img/minid1.jpg" alt="Walk in the Woods">
                 </div>
                 <div class="item">
-                    <img class="box-fs" src="img/minis5.jpg" alt="Lucifer">
+                    <img class="box-fs" src="img/minid2.jpg" alt="The Tinder Swindler">
                 </div>
                 <div class="item">
-                    <img class="box-fs" src="img/minis10.jpg" alt="A anatomia de grey">
+                    <img class="box-fs" src="img/minid3.jpg" alt="Absorvendo o tabu">
                 </div>
                 <div class="item">
-                    <img class="box-fs" src="img/minis14.jpg" alt="25 e 21">
+                    <img class="box-fs" src="img/minid4.jpg" alt="Becoming">
                 </div>
                 <div class="item">
-                    <img class="box-fs" src="img/minis16.jpg" alt="CSI Vegas">
+                    <img class="box-fs" src="img/minid5.jpg" alt="13 th">
                 </div>
                 <div class="item">
-                    <img class="box-fs" src="img/minis22.jpg" alt="Roda do tempo">
+                    <img class="box-fs" src="img/minid6.jpg" alt="Amy">
                 </div>
                 <div class="item">
-                    <img class="box-fs" src="img/minis24.jpg" alt="Dead in the Water">
+                    <img class="box-fs" src="img/minid7.jpg" alt="Winter on fire">
                 </div>
                 <div class="item">
-                    <img class="box-fs" src="img/minis30.jpg" alt="Inventando Anna">
+                    <img class="box-fs" src="img/minid8.jpg" alt="The Square">
                 </div>
                 <div class="item">
-                    <img class="box-fs" src="img/minis32.jpg" alt="Big Sky">
+                    <img class="box-fs" src="img/minid9.jpg" alt="Neymar the perfect chaos">
                 </div>
     </div>
 </div>
