--- a/filmes.html
+++ b/filmes.html
@@ -8,7 +8,7 @@
 <!--owl css-->
 <link rel="stylesheet" href="css/owl.carousel.min.css">
 <link rel="stylesheet" href="css/owl.theme.default.min.css">
-<title>Netflix Séries</title>
+<title>Netflix Filmes</title>
 </head>
 <body>
 
@@ -81,10 +81,10 @@ header nav a:hover {
 /*Filme principal*/
 .filme-principal {
     font-size: 1em;
-    background-image:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url(img/peaky.jpg);
+    background-image:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url(img/dune.jpg);
     height: 500px;
     background-size: cover;
-    background-position: center center;
+    background-position: top center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -153,8 +153,8 @@ header nav a:hover {
 <main>
     <div class="filme-principal">
         <div class="container">
-            <h2 class="titulo">PEAKY BLINDERS</h2>
-            <p class="descricao">Situada nas violentas ruas de Birmingham nos anos 1920, Peaky Blinders retrata a evolução brutal da família criminosa Shelby e de seu líder, Tommy Shelby (Cillian Murphy), de gângster a legítimo homem de negócios e membro do parlamento, sempre ao lado do irmão Arthur (Paul Anderson).</p>
+            <h2 class="titulo">DUNE</h2>
+            <p class="descricao">Paul Atreides é um jovem brilhante, dono de um destino além de sua compreensão. Ele deve viajar para o planeta mais perigoso do universo para garantir o futuro de seu povo.</p>
             <div class="botoes">
                 <button role="button" class="botao"> <i class="fa-solid fa-play"></i> ASSISTIR AGORA</button>
                 <button role="button" class="botao"> <i class="fa-solid fa-circle-info"></i> MAIS INFORMAÇÕES</button>
@@ -165,33 +165,66 @@ header nav a:hover {
 
 <div class="carrosel-filmes">
     <div class="owl-carousel owl-theme">
-                <div class="item">
-                    <img class="box-fs" src="img/minis1.jpg" alt="Vikings">
-                </div>
-                <div class="item">
-                    <img class="box-fs" src="img/minis5.jpg" alt="Lucifer">
-                </div>
-                <div class="item">
-                    <img class="box-fs" src="img/minis10.jpg" alt="A anatomia de grey">
-                </div>
-                <div class="item">
-                    <img class="box-fs" src="img/minis14.jpg" alt="25 e 21">
-                </div>
-                <div class="item">
-                    <img class="box-fs" src="img/minis16.jpg" alt="CSI Vegas">
-                </div>
-                <div class="item">
-                    <img class="box-fs" src="img/minis22.jpg" alt="Roda do tempo">
-                </div>
-                <div class="item">
-                    <img class="box-fs" src="img/minis24.jpg" alt="Dead in the Water">
-                </div>
-                <div class="item">
-                    <img class="box-fs" src="img/minis30.jpg" alt="Inventando Anna">
-                </div>
-                <div class="item">
-                    <img class="box-fs" src="img/minis32.jpg" alt="Big Sky">
-                </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif3.jpg" alt="Redenção">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif4.jpg" alt="O Projeto Adam">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif6.jpg" alt="Ameaça Lunas">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif7.jpg" alt="Eternos">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif8.jpg" alt="Hacker">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif9.jpg" alt="Expresso do amanhã">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif11.jpg" alt="A era do gelo">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif12.jpg" alt="Era uma vez em Hollywood">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif15.jpg" alt="Justiceiro">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif17.jpg" alt="Shang-chi A lenda dos dez aneis">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif18.jpg" alt="Assumindo o controle">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif19.jpg" alt="Jumanji">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif20.jpg" alt="Morbius">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif21.jpg" alt="De volta ao espaço">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif23.jpg" alt="Falçao eo soldado infernal">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif25.jpg" alt="Cavaleiro da lua">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif26.jpg" alt="Harry Potter">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif27.jpg" alt="Gavião arqueiro">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif29.jpg" alt="Jolt">
+            </div>
+            <div class="item">
+                <img class="box-fs" src="img/minif33.jpg" alt="Através da minha janela">
+            </div>
     </div>
 </div>
 
