--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/netflix.ico" type="image/x-icon">
 
     <!--owl css-->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <title>Netflix Clone</title>
+    <title>Netflix</title>
 </head>
 <body>
 
     <header>
         <div class="container-header">
-            <img class="logo" src="img/Netflix-logo.svg" height="40" alt="logo da Netflix">
+            <a href="index.html"><img class="logo" src="img/Netflix-logo.svg" height="40" alt="logo da Netflix"></a>
             <nav>
                 <a href="index.html">Inicio</a>
                 <a href="series.html">Séries</a>
-                <a href="#">Filmes</a>
-                <a href="#">Documentários</a>
+                <a href="filmes.html">Filmes</a>
+                <a href="documentarios.html">Documentários</a>
             </nav>
         </div>
     </header>
@@ -40,12 +41,11 @@
 
     <div class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
-
-                <div class="item">
-                <img class="box-fs" src="img/minif1.jpg" alt="Vikings">
-                </div>
                 <div class="item">
                     <img class="box-fs" src="img/minis2.jpg" alt="Peaky Blinders">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minid1.jpg" alt="Walk in the Woods">
                 </div>
                 <div class="item">
                     <img class="box-fs" src="img/minif3.jpg" alt="Redenção">
@@ -63,10 +63,16 @@
                     <img class="box-fs" src="img/minif7.jpg" alt="Eternos">
                 </div>
                 <div class="item">
+                    <img class="box-fs" src="img/minid2.jpg" alt="The Tinder Swindler">
+                </div>
+                <div class="item">
                     <img class="box-fs" src="img/minif8.jpg" alt="Hacker">
                 </div>
                 <div class="item">
                     <img class="box-fs" src="img/minif9.jpg" alt="Expresso do amanhã">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minid3.jpg" alt="Absorvendo o tabu">
                 </div>
                 <div class="item">
                     <img class="box-fs" src="img/minis10.jpg" alt="A anatomia de grey">
@@ -78,7 +84,13 @@
                     <img class="box-fs" src="img/minif12.jpg" alt="Era uma vez em Hollywood">
                 </div>
                 <div class="item">
+                    <img class="box-fs" src="img/minid4.jpg" alt="Becoming">
+                </div>
+                <div class="item">
                     <img class="box-fs" src="img/minif13.jpg" alt="Dune">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minid5.jpg" alt="13 th">
                 </div>
                 <div class="item">
                     <img class="box-fs" src="img/minis14.jpg" alt="25 e 21">
@@ -93,6 +105,9 @@
                     <img class="box-fs" src="img/minif17.jpg" alt="Shang-chi A lenda dos dez aneis">
                 </div>
                 <div class="item">
+                    <img class="box-fs" src="img/minid6.jpg" alt="Amy">
+                </div>
+                <div class="item">
                     <img class="box-fs" src="img/minif18.jpg" alt="Assumindo o controle">
                 </div>
                 <div class="item">
@@ -105,10 +120,16 @@
                     <img class="box-fs" src="img/minif21.jpg" alt="De volta ao espaço">
                 </div>
                 <div class="item">
+                    <img class="box-fs" src="img/minid7.jpg" alt="Winter on fire">
+                </div>
+                <div class="item">
                     <img class="box-fs" src="img/minis22.jpg" alt="Roda do tempo">
                 </div>
                 <div class="item">
                     <img class="box-fs" src="img/minif23.jpg" alt="Falçao eo soldado infernal">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minid8.jpg" alt="The Square">
                 </div>
                 <div class="item">
                     <img class="box-fs" src="img/minis24.jpg" alt="Dead in the Water">
@@ -124,6 +145,9 @@
                 </div>
                 <div class="item">
                     <img class="box-fs" src="img/minif29.jpg" alt="Jolt">
+                </div>
+                <div class="item">
+                    <img class="box-fs" src="img/minid9.jpg" alt="Neymar the perfect chaos">
                 </div>
                 <div class="item">
                     <img class="box-fs" src="img/minis30.jpg" alt="Inventando Anna">
