--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     
     <main>
-        <div class="filme-principal">
+        <video src="img/perfect.mov"autoplay muted loop class="filme-principal">
             <div class="container">
                 <h2 class="titulo">AFTER - DEPOIS DA PROMESSA</h2>
                 <p class="descricao">Tessa Young é uma jovem com uma vida simples, ótimas notas na escola, muitos amigos e um bom namorado. Todos os próximos passos de sua vida já estão planejados, mas as coisas mudam quando ela conhece um homem atraente e cheio de segredos sombrios.</p>
@@ -36,7 +36,7 @@
                     <button role="button" class="botao"> <i class="fa-solid fa-circle-info"></i> MAIS INFORMAÇÕES</button>
                 </div>
             </div>
-        </div>
+        </video>
     </main>
 
     <div class="carrosel-filmes">
